--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,9 +9,12 @@ html {
 }
 @font-face {
   font-family: 'Billabong';
-  src: URL('../public/Billabong.ttf') format('truetype');
+  src: url('webfont.eot'); /* IE9 Compat Modes */
+  src: url('webfont.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('webfont.woff') format('woff'),
+    /* Modern Browsers */ url('webfont.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
-
 @layer base {
   body {
     @apply font-body text-black/80 bg-gray-100 tracking-[0.015em];
