--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,11 +9,10 @@ html {
 }
 @font-face {
   font-family: 'Billabong';
-  src: url('webfont.eot'); /* IE9 Compat Modes */
-  src: url('webfont.eot?#iefix') format('embedded-opentype'),
-    /* IE6-IE8 */ url('webfont.woff') format('woff'),
-    /* Modern Browsers */ url('webfont.ttf') format('truetype'),
-    /* Safari, Android, iOS */ url('webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+  src: url('./Billabong.ttf'); /* IE9 Compat Modes */
+  src: url('./Billabong.ttf?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('./Billabong.ttf') format('woff'),
+    /* Modern Browsers */ url('./Billabong.ttf') format('truetype');
 }
 @layer base {
   body {
