Refactoring code, created some custom hooks, Renaming files and folders ...

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,10 @@
 @tailwind utilities;
 
 html {
+  /* For production */
   font-size: 105%;
+  /* For developing */
+  /* font-size: 100%; */
 }
 
 @media only screen and(max-width: 2000px) {
